--- a/templates/report/aoi_daily/index.html
+++ b/templates/report/aoi_daily/index.html
@@ -8,11 +8,10 @@
 <body>
     {% if show_cover %}
         {% include 'report/aoi_daily/cover.html' %}
-    {% elif show_summary %}
-        {% include 'report/summary_toc.html' %}
     {% endif %}
 
     {% include 'report/aoi_daily/shift_summary.html' %}
+    {% include 'report/aoi_daily/summary_toc.html' %}
     {% include 'report/aoi_daily/assembly_history.html' %}
 </body>
 </html>
