Add shift chart description and test

--- a/templates/report/aoi_daily/shift_summary.html
+++ b/templates/report/aoi_daily/shift_summary.html
@@ -3,6 +3,7 @@
     <p class="section-desc">Comparison of inspection totals and reject rates by shift.</p>
     <div class="chart-block">
         <img src="{{ shiftImg }}" alt="Boards inspected by shift">
+        <p class="chart-desc">{{ shiftImgDesc }}</p>
         <div class="chart-summary">
             <p>
                 <strong>1st Shift Total:</strong> {{ shift1_total }}<br>
