--- a/templates/report/aoi_daily/index.html
+++ b/templates/report/aoi_daily/index.html
@@ -12,6 +12,9 @@
 
     {% include 'report/aoi_daily/shift_summary.html' %}
     {% include 'report/aoi_daily/summary_toc.html' %}
+    {% for asm in assemblies %}
+        {% include 'report/aoi_daily/assembly_detail.html' %}
+    {% endfor %}
     {% include 'report/aoi_daily/assembly_history.html' %}
 </body>
 </html>
