Move AOI daily TOC to cover

--- a/templates/report/aoi_daily/cover.html
+++ b/templates/report/aoi_daily/cover.html
@@ -52,6 +52,7 @@
             {% endfor %}
             </tbody>
         </table>
+        {% include 'report/aoi_daily/summary_toc.html' %}
     </div>
 </section>
 
