--- a/templates/operator_report.html
+++ b/templates/operator_report.html
@@ -61,11 +61,12 @@
     <input type="checkbox" id="include-cover" checked />
   </div>
   <button id="download-report">Download</button>
+  <span class="spinner" id="download-spinner" hidden></span>
   <button id="email-report">Email Report</button>
 </div>
 {% endblock %}
 
 {% block scripts %}
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="{{ url_for('static', filename='js/operator_report.js') }}"></script>
+<script type="module" src="{{ url_for('static', filename='js/operator_report.js') }}"></script>
 {% endblock %}
