Include program in AOI daily report payload

--- a/templates/report/aoi_daily/cover.html
+++ b/templates/report/aoi_daily/cover.html
@@ -20,12 +20,13 @@
         <h2>1st Shift Summary</h2>
         <table class="data-table">
             <thead>
-                <tr><th>Operator</th><th>Assembly</th><th>Job Number</th><th>Quantity Inspected</th><th>Quantity Rejected</th></tr>
+                <tr><th>Operator</th><th>Program</th><th>Assembly</th><th>Job Number</th><th>Quantity Inspected</th><th>Quantity Rejected</th></tr>
             </thead>
             <tbody>
             {% for row in shift1 %}
                 <tr>
                     <td>{{ row.operator }}</td>
+                    <td>{{ row.program }}</td>
                     <td>{{ row.assembly }}</td>
                     <td>{{ row.job }}</td>
                     <td>{{ row.inspected }}</td>
@@ -38,12 +39,13 @@
         <h2>2nd Shift Summary</h2>
         <table class="data-table">
             <thead>
-                <tr><th>Operator</th><th>Assembly</th><th>Job Number</th><th>Quantity Inspected</th><th>Quantity Rejected</th></tr>
+                <tr><th>Operator</th><th>Program</th><th>Assembly</th><th>Job Number</th><th>Quantity Inspected</th><th>Quantity Rejected</th></tr>
             </thead>
             <tbody>
             {% for row in shift2 %}
                 <tr>
                     <td>{{ row.operator }}</td>
+                    <td>{{ row.program }}</td>
                     <td>{{ row.assembly }}</td>
                     <td>{{ row.job }}</td>
                     <td>{{ row.inspected }}</td>
