Add Assembly Forecast link to Tools menu

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,7 @@
           <div class="dropdown">
             <a href="#">Rework Stencil Lookup</a>
             <a href="#">Verified Part Markings</a>
+            <a href="{{ url_for('main.assembly_forecast') }}">Assembly Forecast</a>
           </div>
         </li>
         <li class="nav-item">
