Add customer yield chart and expose customer in forecast API

--- a/templates/assembly_forecast.html
+++ b/templates/assembly_forecast.html
@@ -12,6 +12,9 @@
     <canvas id="forecastChart"></canvas>
   </div>
   <div class="preview-card" style="height:300px; margin-top:16px;">
+    <canvas id="customerYieldChart"></canvas>
+  </div>
+  <div class="preview-card" style="height:300px; margin-top:16px;">
     <canvas id="falseCallChart"></canvas>
   </div>
   <div class="preview-card" style="height:300px; margin-top:16px;">
