Refactor dashboard previews and centralize Chart.js

--- a/templates/base.html
+++ b/templates/base.html
@@ -59,6 +59,7 @@
   <div class="content">
     {% block content %}{% endblock %}
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="{{ url_for('static', filename='js/main.js') }}"></script>
   {% block scripts %}{% endblock %}
 </body>
